src/test/compile-fail/swap-uninit.rs
// error-pattern:Unsatisfied precondition

fn main() { let x = 3; let y; x <-> y; }